:hammer: fix : footer spacing style

--- a/src/components/AppFooter/style.scss
+++ b/src/components/AppFooter/style.scss
@@ -6,8 +6,6 @@
   background-color: vars.$light-color;
 
   &__section {
-    margin-bottom: vars.$space-20;
-
     @include mixin.media('medium') {
       display: flex;
     }
@@ -15,8 +13,6 @@
 
   &__logo, &-nav {
     padding: vars.$space-10;
-    padding-bottom: vars.$space-20;
-    margin-bottom: vars.$space-20;
     border-bottom: 1px solid vars.$light-stroke-color;
   }
 
